--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
     <div class="main-body container">
         <div class="image">
-            <img src="IMAGES/_Path_ (1).png" alt=":(">
+            <img src="IMAGES/moon.png" alt=":)">
         </div>
         <form action="index.php" method="POST">
 
