--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registeration</title>
     <!-- Page Title Logo Icon -->
-    <!-- <link rel="icon" href="IMAGES/logo.webp"> -->
+    <link rel="icon" href="IMAGES/My Dumb Logo.webp">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
